# Innovites-cable-design-validation-system

./: .env.example  Dockerfile  README.md  conductors.db  docker-compose.yaml  main.py  pyproject.toml
Docker/: Dockerfile  docker-compose.yaml
extracted_output/: conductor_v1.json
src/backend/: cable_validator.py  test_db.py
src/backend/auditors/: llm_auditor.py
src/backend/config/: constants.py  enums.py  exception.py  logger.py  settings.py
src/backend/db/: crud.py  database.py
src/backend/db/models/: ai_validation_model.py  conductor_spec_model.py
src/backend/extraction/: extractor.py
src/backend/extractor/: llm_extractor.py
src/backend/formatters/: evidence_formatters.py
src/backend/interfaces/: IS_cable_validation.py  LLM_Client.py
src/backend/orchestrator/: cable_validation_orchestrator.py
src/backend/prompt_library/: extraction_prompt.py  prompt_registry.py  system_prompt.py
src/backend/prompt_library/extraction/: v1.py
src/backend/providers/: anthropic_llm_client.py  gemini_llm_client.py  groq_llm_client.py  openai_llm_client.py
src/backend/router/: design_router.py  system_router.py
src/backend/router/v1/: design_router.py
src/backend/schemas/: cable_validation_schema.py  conductor_v1_schema.py
src/backend/tasks/: validation_task.py
src/backend/validators/: cable_rag_validator.py  database_validators.py
src/frontend/: app.py
