[project]
name = "innovites-cable-design-validation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "camelot-py>=0.11.0",
    "celery>=5.6.2",
    "colorlog>=6.10.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.6",
    "langsmith>=0.5.2",
    "llama-index>=0.14.12",
    "llama-parse>=0.6.54",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "uvicorn[standard]>=0.40.0",
]
